Header Added and Styled

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Document</title>
   </head>
 
-  <header></header>
+  <header>
+    <img class="icon" src="resources/images/1024px-Globe_icon.svg.png" />
+    <nav>
+      <ul class="float-right">
+        <li><a href="#">North America</a></li>
+        <li><a href="#">South America</a></li>
+        <li><a href="#">Oceania</a></li>
+        <li><a href="#">Europe</a></li>
+        <li><a href="#">Asia</a></li>
+        <li><a href="#">Africa</a></li>
+      </ul>
+    </nav>
+  </header>
   <body></body>
 </html>
