Skeleton buildout. Start of Data Addition

--- a/index.html
+++ b/index.html
@@ -5,21 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <title>Country Data</title>
   </head>
 
   <header>
     <img class="icon" src="resources/images/1024px-Globe_icon.svg.png" />
     <nav>
       <ul class="float-right">
-        <li><a href="#">North America</a></li>
-        <li><a href="#">South America</a></li>
-        <li><a href="#">Oceania</a></li>
-        <li><a href="#">Europe</a></li>
-        <li><a href="#">Asia</a></li>
-        <li><a href="#">Africa</a></li>
+        <li><a href="#north-america">North America</a></li>
+        <li><a href="#south-america">South America</a></li>
+        <li><a href="#oceania">Oceania</a></li>
+        <li><a href="#europe">Europe</a></li>
+        <li><a href="#asia">Asia</a></li>
+        <li><a href="#africa">Africa</a></li>
       </ul>
     </nav>
   </header>
-  <body></body>
+  <body>
+    <section id="north-america">
+      <h2>North American Countries by Population</h2>
+      <table class="center">
+        <tr>
+          <th>Flag</th>
+          <th>Name</th>
+          <th>Capitol</th>
+          <th>2021 Population</th>
+          <th>Largest City</th>
+        </tr>
+        <tr id="US">
+          <td class="flag">
+            <img src="./resources/images/us.png" alt="Flag of USA" />
+          </td>
+          <td>United States of America</td>
+          <td>Washington D.C.</td>
+          <td>332,629,221</td>
+          <td>New York</td>
+        </tr>
+        <tr id="MX">
+          <td class="flag">
+            <img src="./resources/images/mx.png" alt="Flag of Mexico" />
+          </td>
+          <td>Mexico</td>
+          <td>Mexico City</td>
+          <td>130,099,940</td>
+          <td>Mexico City</td>
+        </tr>
+        <tr id="CA">
+          <td class="flag">
+            <img src="./resources/images/ca.png" alt="Flag of Canada" />
+          </td>
+          <td>Canada</td>
+          <td>Ottawa</td>
+          <td>38,022,855</td>
+          <td>Toronto</td>
+        </tr>
+        <tr id="GT">
+          <td class="flag">
+            <img src="./resources/images/gt.png" alt="Flag of Guatemala" />
+          </td>
+          <td>Guatemala</td>
+          <td>Guatemala City</td>
+          <td>18,196,737</td>
+          <td>Guatemala City</td>
+        </tr>
+        <tr id="HT">
+          <td class="flag">
+            <img src="./resources/images/ht.png" alt="Flag of Haiti" />
+          </td>
+          <td>Haiti</td>
+          <td>Port-au-Prince</td>
+          <td>11,520,664</td>
+          <td>Port-au-Prince</td>
+        </tr>
+        <tr id="CU">
+          <td class="flag">
+            <img src="./resources/images/cu.png" alt="Flag of Cuba" />
+          </td>
+          <td>Cuba</td>
+          <td>Havana</td>
+          <td>11,325,137</td>
+          <td>Havana</td>
+        </tr>
+        <tr id="DO">
+          <td class="flag">
+            <img
+              src="./resources/images/do.png"
+              alt="Flag of the Dominican Republic"
+            />
+          </td>
+          <td>Dominican Republic</td>
+          <td>Santo Domingo</td>
+          <td>10,942,675</td>
+          <td>Santo Domingo</td>
+        </tr>
+      </table>
+    </section>
+    <section id="south-america">
+      <h2>South American Companies by Population</h2>
+    </section>
+    <section id="oceania">
+      <h2>Oceanic Countries by Population</h2>
+    </section>
+    <section id="europe">
+      <h2>European Countries by Population</h2>
+    </section>
+    <section id="asia">
+      <h2>Asian Countries by Population</h2>
+    </section>
+    <section id="africa">
+      <h2>African Countries by Population</h2>
+    </section>
+  </body>
 </html>
